add config for navigator and adjust video button

--- a/app.json
+++ b/app.json
@@ -123,6 +123,9 @@
     "uploadFile": 10000,
     "downloadFile": 10000
   },
+  "navigateToMiniProgramAppIdList": [
+    "wx4f1b24bdc99fa23b"
+  ],
   "workers": "workers",
   "debug": false
 }
