fix typo & update

--- a/app.json
+++ b/app.json
@@ -127,5 +127,10 @@
     "wx4f1b24bdc99fa23b"
   ],
   "workers": "workers",
-  "debug": false
+  "debug": false,
+  "permission": {
+    "scope.userLocation": {
+      "desc": "你的位置信息将用于小程序位置接口的效果展示"
+    }
+  }
 }
