add samples: canvas2D, WebGL, VideoPictureInPicture

--- a/miniprogram/app.json
+++ b/miniprogram/app.json
@@ -135,7 +135,8 @@
     "page/weui/example/icons/icons",
     "page/weui/example/form-page/form-page",
     "page/weui/example/half-screen-dialog/half-screen-dialog",
-    "page/weui/example/actionsheet/actionsheet"
+    "page/weui/example/actionsheet/actionsheet",
+    "page/component/pages/video/picture-in-picture"
   ],
   "window": {
     "navigationBarTextStyle": "black",
