--- a/miniprogram/app.json
+++ b/miniprogram/app.json
@@ -148,7 +148,9 @@
     "page/weui/example/toptips/toptips",
     "page/component/pages/aria-component/aria-component",
     "page/API/pages/audio/audio",
-    "page/API/pages/mdns/mdns"
+    "page/API/pages/mdns/mdns",
+    "page/API/pages/get-performance/get-performance",
+    "page/API/pages/get-battery-info/get-battery-info"
   ],
   "window": {
     "navigationBarTextStyle": "black",
