--- a/miniprogram/app.json
+++ b/miniprogram/app.json
@@ -29,6 +29,7 @@
     "page/component/pages/movable-view/movable-view",
     "page/component/pages/cover-view/cover-view",
     "page/component/pages/rich-text/rich-text",
+    "page/component/pages/live-player/live-player",
     "page/API/index",
     "page/API/pages/login/login",
     "page/API/pages/get-user-info/get-user-info",
