--- a/miniprogram/app.json
+++ b/miniprogram/app.json
@@ -154,7 +154,8 @@
     "page/API/pages/bluetooth/slave/slave",
     "page/API/pages/udp-socket/udp-socket",
     "page/API/pages/get-background-fetch-data/get-background-fetch-data",
-    "page/API/pages/get-background-prefetch-data/get-background-prefetch-data"
+    "page/API/pages/get-background-prefetch-data/get-background-prefetch-data",
+    "page/weui/example/vtabs/vtabs"
   ],
   "window": {
     "navigationBarTextStyle": "black",
