--- a/project.config.json
+++ b/project.config.json
@@ -29,7 +29,7 @@
 	},
 	"compileType": "miniprogram",
 	"libVersion": "2.11.0",
-	"appid": "wxefe392b88181200a",
+	"appid": "wxe5f52902cf4de896",
 	"projectname": "%E5%B0%8F%E7%A8%8B%E5%BA%8F%E7%A4%BA%E4%BE%8B",
 	"isGameTourist": false,
 	"simulatorType": "wechat",
