#fix 添加缺少的依赖包，npm run init脚本修改,更新readme，按照文档目前步骤，程序可以正常运行

--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "description": "WeChat miniprogram demo",
   "scripts": {
-    "init": "cd cloudfunctions/ && tnpm i --production && cd ../miniprogram/ && tnpm i --production",
+    "init": "cd miniprogram/ && npm i --production",
     "lint": "eslint .",
     "wxss:transform-vars": "gulp transform-css-vars"
   },
