feat(face-detect): 开放人脸检测以及识别接口的v2版本

--- a/miniprogram/app.json
+++ b/miniprogram/app.json
@@ -67,9 +67,14 @@
         "pages/api/soter-authentication/soter-authentication",
         "pages/api/setting/setting",
         "pages/ar/visionkit-basic/visionkit-basic",
+        "pages/ar/visionkit-basic-v2/visionkit-basic-v2",
         "pages/ar/plane-ar/plane-ar",
+        "pages/ar/plane-ar-v2/plane-ar-v2",
         "pages/ar/2dmarker-ar/2dmarker-ar",
+        "pages/ar/3dmarker-ar/3dmarker-ar",
         "pages/ar/osd-ar/osd-ar",
+        "pages/ar/face-detect/face-detect",
+        "pages/ar/photo-face-detect/photo-face-detect",
         "pages/page/set-navigation-bar-title/set-navigation-bar-title",
         "pages/page/navigation-bar-loading/navigation-bar-loading",
         "pages/page/navigator/navigator",
