--- a/project.private.config.json
+++ b/project.private.config.json
@@ -5,5 +5,5 @@
     "useIsolateContext": true,
     "urlCheck": false
   },
-  "projectname": "%25E5%25B0%258F%25E7%25A8%258B%25E5%25BA%258F%25E7%25A4%25BA%25E4%25BE%258B%2520%25E5%2586%2585%25E7%25BD%2591"
+  "projectname": "小程序示例"
 }
