--- a/project.config.json
+++ b/project.config.json
@@ -34,7 +34,8 @@
     "disableUseStrict": false,
     "showES6CompileOption": false,
     "useCompilerPlugins": [
-      "typescript"
+      "typescript",
+      "less"
     ],
     "ignoreDevUnusedFiles": false,
     "ignoreUploadUnusedFiles": false,
