feat: adapt glass-easel

--- a/project.private.config.json
+++ b/project.private.config.json
@@ -30,6 +30,13 @@
           "query": "index=1&url=https%253A%252F%252Fpicsum.photos%252F300%252F400%253Frandom%253D1&content=%E6%8E%A8%E8%8D%90%20Skyline%EF%BC%8C%E4%BD%BF%E7%94%A8%E5%90%8E%E4%BD%93%E9%AA%8C%E6%B5%81%E7%95%85%E5%BE%88%E5%A4%9A~&ratio=0.75",
           "launchMode": "default",
           "scene": null
+        },
+        {
+          "name": "page/animation/index",
+          "pathName": "page/animation/index",
+          "query": "",
+          "launchMode": "default",
+          "scene": null
         }
       ]
     }
