--- a/miniprogram/app.json
+++ b/miniprogram/app.json
@@ -222,14 +222,9 @@
         "pages/share-element/card/index",
         "pages/half-page/scale-page/index",
         "pages/half-page/half-page/index",
-        "pages/address-book/index",
         "pages/half-screen/index",
-        "pages/tabs/index",
-        "pages/album/index",
-        "pages/preview/index",
         "pages/custom-route/index",
-        "pages/custom-route/detail",
-        "pages/scroll-view/index"
+        "pages/custom-route/detail"
       ]
     },
     {
