--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "description": "WeChat miniprogram demo",
   "scripts": {
-    "init": "npm run sync && cd cloudfunctions/ && tnpm i --production && cd ../miniprogram/ && tnpm i --production",
+    "init": "npm run sync && cd cloudfunctions/ && npm i --production && cd ../miniprogram/ && npm i --production",
     "lint": "eslint .",
     "wxss:transform-vars": "gulp transform-css-vars",
     "sync": "git submodule update --init --recursive",
