--- a/miniprogram/app.json
+++ b/miniprogram/app.json
@@ -217,19 +217,11 @@
       "pages": [
         "pages/worklet/animation/index",
         "pages/worklet/gesture/index",
-        "pages/worklet/bottom-sheet/index",
         "pages/share-element/list/index",
         "pages/share-element/card/index",
+        "pages/worklet/bottom-sheet/index",
         "pages/half-page/scale-page/index",
-        "pages/half-page/half-page/index",
-        "pages/address-book/index",
-        "pages/half-screen/index",
-        "pages/tabs/index",
-        "pages/album/index",
-        "pages/preview/index",
-        "pages/custom-route/index",
-        "pages/custom-route/detail",
-        "pages/scroll-view/index"
+        "pages/half-page/half-page/index"
       ]
     },
     {
