--- a/project.private.config.json
+++ b/project.private.config.json
@@ -1,13 +1,13 @@
 {
-  "libVersion": "2.31.1",
+  "libVersion": "2.32.0",
   "description": "项目私有配置文件。此文件中的内容将覆盖 project.config.json 中的相同字段。项目的改动优先同步到此文件中。详见文档：https://developers.weixin.qq.com/miniprogram/dev/devtools/projectconfig.html",
   "setting": {
     "useIsolateContext": true,
     "urlCheck": false,
-    "compileHotReLoad": false,
+    "compileHotReLoad": true,
     "lazyloadPlaceholderEnable": false
   },
-  "projectname": "小程序示例",
+  "projectname": "miniprogram-demo-master",
   "condition": {
     "miniprogram": {
       "list": [
