--- a/project.private.config.json
+++ b/project.private.config.json
@@ -1,11 +1,12 @@
 {
-  "libVersion": "2.31.1",
+  "libVersion": "2.32.0",
   "description": "项目私有配置文件。此文件中的内容将覆盖 project.config.json 中的相同字段。项目的改动优先同步到此文件中。详见文档：https://developers.weixin.qq.com/miniprogram/dev/devtools/projectconfig.html",
   "setting": {
     "useIsolateContext": true,
     "urlCheck": false,
     "compileHotReLoad": false,
-    "lazyloadPlaceholderEnable": false
+    "lazyloadPlaceholderEnable": false,
+    "skylineRenderEnable": false
   },
   "projectname": "小程序示例",
   "condition": {
@@ -41,6 +42,20 @@
         {
           "name": "",
           "pathName": "packageSkyline/pages/scroll-view/index",
+          "query": "",
+          "launchMode": "default",
+          "scene": null
+        },
+        {
+          "name": "product-list",
+          "pathName": "packageSkylineExamples/examples/product-list/pages/index/index",
+          "query": "",
+          "launchMode": "default",
+          "scene": null
+        },
+        {
+          "name": "expanded-scroll-view",
+          "pathName": "packageSkylineExamples/examples/expanded-scroll-view/pages/index/index",
           "query": "",
           "launchMode": "default",
           "scene": null
