feat(vision): 一些功能的更新

--- a/miniprogram/app.json
+++ b/miniprogram/app.json
@@ -71,6 +71,8 @@
         "pages/ar/visionkit-basic-v2/visionkit-basic-v2",
         "pages/ar/plane-ar/plane-ar",
         "pages/ar/plane-ar-v2/plane-ar-v2",
+        "pages/ar/plane-ar-v2-marker/plane-ar-v2-marker",
+        "pages/ar/plane-ar-v2-depth/plane-ar-v2-depth",
         "pages/ar/plane-ar-3dof/plane-ar-3dof",
         "pages/ar/2dmarker-ar/2dmarker-ar",
         "pages/ar/3dmarker-ar/3dmarker-ar",
@@ -78,11 +80,14 @@
         "pages/ar/face-detect/face-detect",
         "pages/ar/body-detect/body-detect",
         "pages/ar/hand-detect/hand-detect",
+        "pages/ar/depth-detect/depth-detect",
+        "pages/ar/cameraBuffer-detect/cameraBuffer-detect",
         "pages/ar/ocr-detect/ocr-detect",
         "pages/ar/photo-ocr-detect/photo-ocr-detect",
         "pages/ar/photo-hand-detect/photo-hand-detect",
         "pages/ar/photo-body-detect/photo-body-detect",
         "pages/ar/photo-face-detect/photo-face-detect",
+        "pages/ar/photo-depth-detect/photo-depth-detect",
         "pages/page/set-navigation-bar-title/set-navigation-bar-title",
         "pages/page/navigation-bar-loading/navigation-bar-loading",
         "pages/page/navigator/navigator",
