--- a/miniprogram/app.json
+++ b/miniprogram/app.json
@@ -251,7 +251,9 @@
         "examples/card_transition/pages/list/list",
         "examples/card_transition/pages/detail/detail",
         "examples/product-list/pages/index/index",
-        "examples/expanded-scroll-view/pages/index/index"
+        "examples/expanded-scroll-view/pages/index/index",
+        "examples/refresher-two-level/index/index",
+        "examples/refresher-two-level/goods/index"
       ]
     },
     {
