--- a/project.private.config.json
+++ b/project.private.config.json
@@ -65,6 +65,13 @@
           "query": "",
           "launchMode": "default",
           "scene": null
+        },
+        {
+          "name": "3dmarker-ar",
+          "pathName": "packageAPI/pages/ar/3dmarker-ar/3dmarker-ar",
+          "query": "",
+          "launchMode": "default",
+          "scene": null
         }
       ]
     }
