(feat)缓存一般试鞋的改动

--- a/project.private.config.json
+++ b/project.private.config.json
@@ -12,6 +12,20 @@
     "miniprogram": {
       "list": [
         {
+          "name": "photo-shoe-detect",
+          "pathName": "packageAPI/pages/ar/photo-shoe-detect/photo-shoe-detect",
+          "query": "",
+          "launchMode": "default",
+          "scene": null
+        },
+        {
+          "name": "shoe-detect",
+          "pathName": "packageAPI/pages/ar/shoe-detect/shoe-detect",
+          "query": "",
+          "launchMode": "default",
+          "scene": null
+        },
+        {
           "name": "page/API/pages/storage/storage",
           "pathName": "page/API/pages/storage/storage",
           "query": "",
