(feat)修改AR基础behavior，以及2d marker

--- a/project.config.json
+++ b/project.config.json
@@ -71,5 +71,7 @@
     "ignore": [],
     "include": []
   },
-  "appid": "wxe5f52902cf4de896"
+  "appid": "wxe5f52902cf4de896",
+  "projectname": "miniprogram-demo-master",
+  "libVersion": "2.33.0"
 }
