--- a/project.private.config.json
+++ b/project.private.config.json
@@ -12,6 +12,13 @@
     "miniprogram": {
       "list": [
         {
+          "name": "ar-3dmarker",
+          "pathName": "packageAPI/pages/ar/3dmarker-ar/3dmarker-ar",
+          "query": "",
+          "launchMode": "default",
+          "scene": null
+        },
+        {
           "name": "ar-photo-shoe-detect",
           "pathName": "packageAPI/pages/ar/photo-shoe-detect/photo-shoe-detect",
           "query": "",
@@ -83,13 +90,6 @@
         {
           "name": "demo-1",
           "pathName": "packageComponent/pages/view/grid-view/demo-1/demo-1",
-          "query": "",
-          "launchMode": "default",
-          "scene": null
-        },
-        {
-          "name": "3dmarker-ar",
-          "pathName": "packageAPI/pages/ar/3dmarker-ar/3dmarker-ar",
           "query": "",
           "launchMode": "default",
           "scene": null
