--- a/miniprogram/app.json
+++ b/miniprogram/app.json
@@ -228,7 +228,8 @@
         "pages/adapt/pagination/pagination",
         "pages/adapt/freelayout/freelayout",
         "pages/adapt/layeredpresentation/layeredpresentation",
-        "pages/adapt/horizontalexpansion/horizontalexpansion"
+        "pages/adapt/horizontalexpansion/horizontalexpansion",
+        "pages/adapt/customscreenvalidation/customscreenvalidation"
       ]
     },
     {
