--- a/miniprogram/app.json
+++ b/miniprogram/app.json
@@ -322,6 +322,9 @@
         "pages/template/xr-template-blendDouble/index",
         "pages/template/xr-template-frameEffect/index",
         "pages/template/xr-template-tracker/index",
+        "pages/template/xr-template-markerCenter/index",
+        "pages/template/xr-template-markerLock/index",
+        "pages/template/xr-template-arLine/index",
         "pages/template/xr-template-select/index",
         "pages/template/xr-template-share/index",
         "pages/template/xr-template-removeBlack/index",
