--- a/miniprogram/app.json
+++ b/miniprogram/app.json
@@ -89,6 +89,7 @@
         "pages/ar/face-detect/face-detect",
         "pages/ar/face-detect-3d/face-detect-3d",
         "pages/ar/body-detect/body-detect",
+        "pages/ar/body-detect-3d/body-detect-3d",
         "pages/ar/hand-detect/hand-detect",
         "pages/ar/depth-detect/depth-detect",
         "pages/ar/cameraBuffer-detect/cameraBuffer-detect",
