--- a/miniprogram/app.json
+++ b/miniprogram/app.json
@@ -105,6 +105,7 @@
         "pages/ar/photo-body-detect/photo-body-detect",
         "pages/ar/photo-face-detect/photo-face-detect",
         "pages/ar/photo-depth-detect/photo-depth-detect",
+        "pages/ar/gaussian-splatting/gaussian-splatting",
         "pages/page/set-navigation-bar-title/set-navigation-bar-title",
         "pages/page/navigation-bar-loading/navigation-bar-loading",
         "pages/page/navigator/navigator",
