--- a/miniprogram/app.json
+++ b/miniprogram/app.json
@@ -474,6 +474,5 @@
     }
   },
   "renderer": "skyline",
-  "componentFramework": "glass-easel",
-  "appBar": {}
+  "componentFramework": "glass-easel"
 }
