进入app-bar演示页面再展示

--- a/miniprogram/app.json
+++ b/miniprogram/app.json
@@ -474,5 +474,6 @@
     }
   },
   "renderer": "skyline",
-  "componentFramework": "glass-easel"
+  "componentFramework": "glass-easel",
+  "appBar": {}
 }
