(feat)xr-frame 更新案例

--- a/miniprogram/app.json
+++ b/miniprogram/app.json
@@ -325,6 +325,7 @@
         "pages/template/xr-template-control/index",
         "pages/template/xr-template-loading/index",
         "pages/template/xr-template-toon/index",
+        "pages/template/xr-template-pbr/index",
         "pages/template/xr-template-planeShadow/index",
         "pages/template/xr-template-geometry/index",
         "pages/template/xr-template-gltfEdit/index",
@@ -347,6 +348,7 @@
         "pages/template/xr-template-lookat/index",
         "pages/template/xr-template-arui/index",
         "pages/template/xr-template-volumeVideo/index",
+        "pages/template/xr-template-dissolve/index",
         "pages/scene-last-record/index",
         "pages/scene-beside-edge/index",
         "pages/physics/scene-physics-shoot/index",
